# efi_ffi

./: Cargo.toml  LICENSE  README.md
src/: boot_services.rs  console.rs  device_path.rs  ip4.rs  lib.rs  loaded_image.rs  managed_network.rs  media.rs  pxebc.rs  runtime_services.rs  simple_network.rs  tcp4.rs  udp4.rs
