[package]
name = "efi_ffi"
version = "0.1.1"
authors = ["Gurinder Singh <frederick.the.fool@gmail.com>"]
edition = "2018"
description = "A foreign function interface to UEFI"
repository = "https://github.com/gurry/efi_ffi"
readme = "README.md"
keywords = ["ffi", "uefi", "efi", "boot-loader", "os-loader"]
categories = ["api-bindings", "no-std", "os"]
license = "MIT"

